<resources>
    <string name="app_name">Guesswords</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_my_words">My Words</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="btn_anonymous_login">anonymous login</string>
    <string name="login_progress_dialog_title">Login Anonymous</string>
    <string name="login_progress_dialog_message">loading</string>
    <string name="login_third_part">Third part login</string>
    <string name="auth_failed">Login failed, try again later</string>
    <string name="game_left_time">Left time:%1</string>
    <string name="game_over">Game Over</string>

    <!-- drawer nav -->
    <string name="nav_choose_group">Choose Groups</string>
    <string name="nav_game_history">Game History</string>
    <string name="nav_my_words">My Words</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About</string>
    <string name="nav_how_to_play">How to play</string>
    <string name="nav_update_db">Update data</string>
    <string name="action_add_group">Add group</string>
    <string name="nav_header_login_before">Click avatar to login</string>

    <!-- About -->
    <string name="about_content">This is a simple game based on personal interest. With the great help of Tian Huahua.</string>
    <string name="data_progress_dialog_message">loading</string>

    <!-- Setting -->
    <string name="setting_game_duration_title">Game Duration</string>
    <string name="setting_game_duration_summary">The duration of game</string>
    <string name="game_no_more_words">No more words</string>
    <string name="app_bar_welcome">Welcome</string>
</resources>
