<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_game_groups"
            android:checked="true"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/nav_choose_group" />
        <item
            android:id="@+id/nav_game_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/nav_game_history" />
        <item
            android:id="@+id/nav_my_words"
            android:icon="@drawable/ic_menu_my"
            android:title="@string/nav_my_words" />
    </group>

    <group
        android:id="@+id/group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_how_to_play"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_how_to_play" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_about" />
    </group>

</menu>
